--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
+body {
+  height: 100%;
+  width: 100%;
+  background-color: #3C3D37;
+}
+
+
 .jet-font {
   font-family: "JetBrains Mono", monospace;
 }
